@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.66 2005/01/12 12:17:41 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.67 2005/01/12 12:51:54 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -299,6 +299,10 @@ Exim version 4.50
 
 68. The host_aton() function was not handling scoped IPv6 addresses (those
     with, for example, "%eth0" on the end) correctly.
+
+69. Fixed some compiler warnings in acl.c for the bitmaps specified with
+    negated items (that is, ~something) in unsigned ints. Some compilers
+    apparently mutter when there is no cast.
 
 
 Exim version 4.43
